# auto-scheduler

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  config.example.yaml  links.txt  links_other.txt  pyproject.toml  pytest.ini
docs/: config.md
examples/: openrouter_hello.py
prompts/: parse_schedule.md
specs/: scheduler.md
src/: config.py  graph.py  main.py  utils.py
src/nodes/: aggregate.py  crawl.py  filter_sort.py  parse.py  validate.py
tests/integration/: test_aggregator.py  test_crawl.py  test_parse_agent.py  test_skip_crawl.py
tests/unit/: test_aggregate.py  test_config.py  test_crawl.py  test_filter_sort.py  test_main.py  test_utils.py  test_validate.py
